cluster/manifests/memory-bank/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memory-bank
  labels:
    name: memory-bank
    # memory-bank uses nfs
    pod-security.kubernetes.io/enforce: baseline
