cluster/manifests/memory-bank/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: memory-bank
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: memory-bank
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
