cluster/manifests/memory-bank/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: memory-bank
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: memory-bank
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./api.openai.com
        - ./openaipublic.blob.core.windows.net
        - ./huggingface.co
        - ./*.huggingface.co
        - ./memory-bank-qdrant.memory-bank.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
